<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="myapp.admin.example.com.onlinelawfirm.ui.home.ClientsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="myapp.admin.example.com.onlinelawfirm.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="myapp.admin.example.com.onlinelawfirm.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="myapp.admin.example.com.onlinelawfirm.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_share"
        android:name="myapp.admin.example.com.onlinelawfirm.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_send"
        android:name="myapp.admin.example.com.onlinelawfirm.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_dashboard" />
</navigation>